# DID-python

./: .gitignore  404.html  AGENTS.md  LEARNINGS.md  PORTING_INSTRUCTIONS.md  Pipfile  README.md  index.html  mkdocs.yml  pyproject.toml  requirements.txt  run_tests.py  setup.py
.github/workflows/: docs.yml  python-package.yml  symmetry.yml
.gitlab/issue_templates/: bug_report.md  feature_report.md  final_QA.md  sprint_review.md
3.8/: __future__.data.json  __future__.meta.json  _ast.data.json  _ast.meta.json  _importlib_modulespec.data.json  _importlib_modulespec.meta.json  abc.data.json  abc.meta.json  array.data.json  array.meta.json  ast.data.json  ast.meta.json  builtins.data.json  builtins.meta.json  codecs.data.json  codecs.meta.json  contextlib.data.json  contextlib.meta.json  daq_system.data.json  daq_system.meta.json  enum.data.json  enum.meta.json  functools.data.json  functools.meta.json  io.data.json  io.meta.json  mmap.data.json  mmap.meta.json  mock.data.json  mock.meta.json  ndi_object.data.json  ndi_object.meta.json  pathlib.data.json  pathlib.meta.json  posix.data.json  posix.meta.json  re.data.json  re.meta.json  setup.data.json  setup.meta.json  (+48 more)
3.8/collections/: __init__.data.json  (+3 more)
api/: index.html
database/: index.html
did/: __init__.py  binarydoc.py  core.py  database.py  decorators.py  did_abc.py  did_document.py  document.py  exception.py  globals.py  id.py  orm.py  query.py  schema.py  settings.py  time.py  trees.py  types.py  utils.py  validate.py  versioning.py
docs/: database.md  document.md  fun.md  index.md  query.md  sqlitedb.md
document/: index.html
example/: Core_API.ipynb  Core_API_MongoDB.ipynb  Demo_Binary_Collection.ipynb  Demo_Database_FileSystem.ipynb  Demo_Database_Query.ipynb  Demo_Database_SQL.ipynb
fun/: index.html
query/: index.html
search/: search_index.json
sqlitedb/: index.html
tests/: helpers.py  test_binary_table.py  test_branch.py  test_datastructures.py  test_db_queries.py  test_doc2sql_superclass.py  test_document.py  test_document_and_branch.py  test_file_cache.py  test_file_document.py  test_fileobj.py  test_invalid_modification.py  test_path_rebasing.py  test_query.py  test_simple_branch.py  test_table_cross_join.py  test_valid_modification.py  utility_helpers.py
(+154 files in other folders)
