[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "did"
version = "0.1.0"
description = "A Python port of the VH-Lab/DID-matlab project"
readme = "README.md"
authors = [
  { name = "Author", email = "vanhoosr@brandeis.edu" },
]
dependencies = [
    "numpy",
    "pandas",
    "portalocker",
    "networkx",
    "matplotlib",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
    "mkdocs",
    "mkdocs-material",
    "mkdocstrings[python]",
    "pytest",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "symmetry: cross-language symmetry tests (MATLAB <-> Python)",
    "make_artifacts: tests that generate artifacts for symmetry testing",
    "read_artifacts: tests that read and validate artifacts from another implementation",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
